2007-02-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-10
	* WebGUI: protect against xdata types which don't have toString()
	conversion supported.

2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-08
	* remove dependency on EPStateMachine, use XDAQ's
	toolbox::fsm::FinitStateMachine instead

2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-07 
	* add state transition 'Stop' (from 'Enabled' to
	'Configured') to EPStateMachine; requires clients to implement
	additional function stopAction()!

2006-11-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

        * tag V00-11-06
	* src/WebGUI.cc: fix resetCounters(), which did not do its job.

2006-11-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-11-05
	* insignificant fixes to src/WebGUI.cc and src/SealModule.cc
	regarding the transition to slc4/gcc3.45.

2006-10-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-04
	* keep track of parameters with an ItemRetrieveListener
	registered, and call cdata::InfoSpace::fireItemValueRetrieve to
	trigger for those parameters to be updated every time a webpage is
	reloaded.

2006-10-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-03
	* add methods 'addItemChangedListener' and
	'addItemRetrieveListener'. Spare the user to figure out which
	parmater is in which info space, add the listener to both the
	application and monitor infospace if registered for a monitor
	parameter.
	* add 'lockInfoSpaces()' and 'unlockInfoSpaces()' methods. Should
	be called in the ActionListener's actionPerformed() method.

2006-10-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-02
	* add WebGUI class, which allows XDAQ applications to simply
	  register their parameters and have them managed and displayed via
	  HyperDAQ automatically (see EventFilter/AutoBU V00-02-00 for an
	  example)
	
